--- a/config/development.sphinx.conf
+++ b/config/development.sphinx.conf
@@ -4,9 +4,46 @@ indexer
 
 searchd
 {
-  address = 127.0.0.1
-  port = 9312
-  log = /Library/WebServer/Documents/workspace/rails-apps/eventpooler/log/searchd.log
-  query_log = /Library/WebServer/Documents/workspace/rails-apps/eventpooler/log/searchd.query.log
-  pid_file = /Library/WebServer/Documents/workspace/rails-apps/eventpooler/log/searchd.development.pid
+  listen = 127.0.0.1:9312
+  log = /Users/neufelni/development/event_pooler/log/searchd.log
+  query_log = /Users/neufelni/development/event_pooler/log/searchd.query.log
+  pid_file = /Users/neufelni/development/event_pooler/log/searchd.development.pid
+}
+
+source event_core_0
+{
+  type = mysql
+  sql_host = localhost
+  sql_user = rails
+  sql_pass = rails
+  sql_db = event_pooler
+  sql_sock = /tmp/mysql.sock
+  sql_query_pre = SET NAMES utf8
+  sql_query_pre = SET TIME_ZONE = '+0:00'
+  sql_query = SELECT     SQL_NO_CACHE `events`.`id` * 1 + 0 AS `id` , `events`.`name` AS `name`, `events`.`slug` AS `slug`, `events`.`description` AS `description`, `events`.`id` AS `sphinx_internal_id`, 4201588131 AS `class_crc`, 0 AS `sphinx_deleted`, UNIX_TIMESTAMP(`events`.`created_at`) AS `created_at`, UNIX_TIMESTAMP(`events`.`updated_at`) AS `updated_at`, UNIX_TIMESTAMP(`events`.`starts_at`) AS `starts_at`, UNIX_TIMESTAMP(`events`.`ends_at`) AS `ends_at`, RADIANS(latitude) AS `latitude`, RADIANS(longitude) AS `longitude`, IFNULL(`events`.`name`, '') AS `name_sort` FROM       `events`  WHERE     (`events`.`id` >= $start AND `events`.`id` <= $end) GROUP BY  `events`.`id` ORDER BY  NULL
+  sql_query_range = SELECT IFNULL(MIN(`id`), 1), IFNULL(MAX(`id`), 1) FROM `events` 
+  sql_attr_uint = sphinx_internal_id
+  sql_attr_uint = class_crc
+  sql_attr_uint = sphinx_deleted
+  sql_attr_timestamp = created_at
+  sql_attr_timestamp = updated_at
+  sql_attr_timestamp = starts_at
+  sql_attr_timestamp = ends_at
+  sql_attr_str2ordinal = name_sort
+  sql_attr_float = latitude
+  sql_attr_float = longitude
+  sql_query_info = SELECT * FROM `events` WHERE `id` = (($id - 0) / 1)
+}
+
+index event_core
+{
+  source = event_core_0
+  path = /Users/neufelni/development/event_pooler/db/sphinx/development/event_core
+  charset_type = utf-8
+}
+
+index event
+{
+  type = distributed
+  local = event_core
 }
