Some git cleanup, migration to fix db issue

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ config/development.sphinx.conf
 db/sphinx/
 public/system
 config/environments/development.rb
-.DS_Store
+.DS_Store?
+config/initializers/secret_token.rb
